--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-charts": "^6.19.4",
     "@phosphor-icons/react": "^2.0.15",
     "@types/faker": "^6.6.9",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
